# GflessClient

./: .eslintrc.js  .gitignore  README.md  binding.gyp  binding.gyp.static  how to run test.md  index.js  package-lock.json  package.json  test.js  test_identity.json
.github/workflows/: ci.yml  combined.yml  cpp.yml  documentation.yml  markdown-link-check.json  nodejs.yml  release.yml  test.yml
Launcher/src/: syncnetworkaccessmanager.cpp  syncnetworkaccessmanager.h
Launcher/src/auth/: blackbox.cpp  fingerprint.cpp  fingerprint.h  identity.cpp  nostaleauth.cpp
examples/: advanced-usage.ts  basic-usage.ts
gfless-cpp/: CMakeLists.txt  README.md
gfless-cpp/examples/: CMakeLists.txt  basic_example.cpp  encrypted_example.cpp
gfless-cpp/include/gfless/: blackbox.h  common.h  crypto_utils.h  fingerprint.h  gfless.h  http_client.h  identity.h
gfless-cpp/src/: blackbox.cpp  common.cpp  crypto_utils.cpp  fingerprint.cpp  http_client.cpp  identity.cpp
gfless-cpp/tests/: CMakeLists.txt  test_blackbox.cpp  test_crypto.cpp  test_fingerprint.cpp  test_integration.cpp  test_utils.cpp  testtools.cpp  testtools.h
gfless-nodejs/: README.md  binding.gyp  jest.config.js  package-lock.json  package.json  tsconfig.json
gfless-nodejs/examples/: basic_example.js  encrypted_example.js
gfless-nodejs/src/: addon.cpp  blackbox_wrapper.cpp  identity_wrapper.cpp  index.ts  utils_wrapper.cpp
gfless-nodejs/tests/: blackbox.test.ts  integration.test.ts  setup.ts  utils.test.ts
lib/: BlackBox.js  Fingerprint.js  Identity.js
node-addon/: CMakeLists.txt  README.md  binding.cpp  package-lock.json  package.json
node-addon/test/: basic.test.js
src/: binding.cpp  blackbox.ts  blackbox_simple.cpp  blackbox_simple.h  blackbox_wrapper.cpp  blackbox_wrapper.h  fingerprint.ts  fingerprint_simple.cpp  fingerprint_simple.h  fingerprint_wrapper.cpp  fingerprint_wrapper.h  game-account.ts  gameforge-account.ts  identity.ts  identity_wrapper.cpp  identity_wrapper.h  index.ts  nostale-auth.ts  nostale_types.cpp  nostale_types.h  types.ts
src/__tests__/: blackbox.test.ts  fingerprint.test.ts
src/__tests__/integration/: auth-flow.test.ts
